--- a/form.html
+++ b/form.html
@@ -107,10 +107,16 @@
         <div class="form_row">
           <div class="form_element">
             <label for="choose_school">Choose School</label>
-            <select name="choose_school" id="select_input" required>
-              <option value="" disabled selected>Select school</option>
-              <option value="school_of_creative_economics">School of Creative Economics</option>
-              <option value="school_of_business">School of Business</option>
+            <select name="choose_school" id="select_input" required><option value="" disabled selected>Select channel</option>
+              <option value="twitter">Twitter</option>
+              <option value="facebook">Facebook</option>
+              <option value="linkedln">Linkedln</option>
+              <option value="youtube">Youtube</option>
+              <option value="friend">Friend</option>
+              <option value="whatsapp">Whatsapp</option>
+              <option value="instagram">Instagram</option>
+              <option value="billboard">Billboard</option>
+              <option value="other">Other</option>
             </select>
           </div>
           <div class="form_element">
@@ -134,6 +140,10 @@
           <div class="form_element">
             <label for="phone_number">Phone Number</label>
             <input type="text" name="phone_number" placeholder="Enter your phone number" required>
+          </div>
+          <div class="form_element">
+            <label for="scholarship_discount">Scholarship/Discount Code (Optional)</label>
+            <input type="text" name="scholarship_discount" placeholder="Scholarship or student ID or discount codes">
           </div>
         </div>
         <div class="form_footer">
